<resources>
    <string name="app_name">Movie Desc</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_main_movie_desc">Avengers: End Game</string>
    <string name="age_13">13+</string>
    <string name="duration">137 MIN</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="storyline">Storyline</string>
    <string name="avenger_end_game_storyline">After the devastating events of Avengers:
        Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers
        assemble once more in order to reverse Thanos\' actions and restore balance to the
        universe.</string>
    <string name="count_review125">125 REVIEWS</string>
    <string name="cast">Cast</string>
    <string name="actor_robert_downey">Robert Downey Jr.</string>
    <string name="actor_chris_evans">Chris Evans</string>
    <string name="actor_mark_ruffalo">Mark Ruffalo</string>
    <string name="actor_chris_hemsworth">Chris Hemsworth</string>
    <string name="back">Back</string>
    <string name="movies_list">Movies list</string>
    <string name="fragment_actors_empty_text">There are no actors right now</string>
    <string name="fragment_actors_chosen_text">You chose: %1$s</string>

</resources>